# open-wechat

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: main.yml
helper/: Cargo.toml  README.md
helper/src/: lib.rs  main.rs  setup.rs  utils.rs
helper/src/controllers/: users.rs
helper/src/error/: mod.rs
helper/src/interfaces/: mod.rs  users.rs
open-wechat/: Cargo.toml  README.md
open-wechat/src/: client.rs  credential.rs  error.rs  lib.rs  response.rs  user.rs
open-wechat/src/client/: authenticate.rs  mod.rs
open-wechat/src/credentials/: decrypt.rs  mod.rs
src/: authenticate.rs  client.rs  credential.rs  decrypt.rs  error.rs  lib.rs  session.rs  trace.rs  user.rs
src/client/: authenticate.rs  mod.rs
src/controllers/: mod.rs  users.rs
src/credentials/: decrypt.rs  mod.rs
src/error/: mod.rs
src/interfaces/: mod.rs  users.rs
src/session/: decrypt.rs  mod.rs
