[package]
name = "open-wechat"
version = "0.2.1"
edition = "2021"
authors = ["HeadIron <i@liangzhicheng.cc>"]
description = "A rust sdk for wechat miniprogram open api"
license = "MIT"
homepage = "https://github.com/headironc/open-wechat"
repository = "https://github.com/headironc/open-wechat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
async-trait = "0.1.77"
thiserror = "1.0.57"
tracing = "0.1.40"
serde = { version = "1.0.197", features = ["derive"] }
serde_repr = "0.1.18"
serde_json = "1.0.114"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
base64 = "0.22.0"
chrono = { version = "0.4.35", features = ["serde"] }
