[package]
name = "open-wechat"
version = "1.2.0"
edition = "2021"
authors = ["HeadIron <i@liangzhicheng.cc>"]
description = "A rust sdk for wechat miniprogram open api"
license = "MIT"
homepage = "https://github.com/headironc/open-wechat"
repository = "https://github.com/headironc/open-wechat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "^0.8.4"
async-trait = "^0.1.83"
base64 = "^0.22.1"
cbc = { version = "^0.1.2", features = ["alloc"] }
chrono = { version = "^0.4.38", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "^1.0.215", features = ["derive"] }
serde_json = "^1.0.133"
serde_repr = "^0.1.19"
sha2 = "0.10.8"
strum = { version = "^0.26.3", features = ['derive'] }
thiserror = "^2.0.3"
tokio = { version = "^1.41.1", features = [] }
tracing = "^0.1.41"
reqwest = { version = "^0.12.9", features = ["json"] }

[dev-dependencies]
axum = "0.8.1"
serde_json = "^1.0.133"
tokio = { version = "^1.41.1", features = ["full"] }
