[package]
name = "open-wechat-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.41.1", features = ["full"] }
axum = { version = "^0.7.9", features = ["macros"] }
thiserror = { version = "^2.0.3" }
serde = { version = "^1.0.215", features = ["derive"] }
serde_json = { version = "^1.0.133" }
dotenvy = { version = "^0.15.7" }
envy = { version = "^0.4.2" }
tracing = { version = "^0.1.40" }
tracing-subscriber = { version = "^0.3.19", features = [
  "registry",
  "fmt",
  "env-filter",
] }
tracing-appender = { version = "^0.2.3" }
tower-http = { version = "^0.6.2", features = ["trace"] }
open-wechat = { path = ".." }
